# langrs

./: Cargo.toml  README.md  asdf.fun  fun.tmLanguage.json  history.txt
.devcontainer/: Dockerfile  devcontainer.json
core/: Cargo.toml  README.md
core/proptest-regressions/: lib.txt
core/src/: evm.rs  lib.rs  main.rs  term.rs  types.rs  value.rs
parser/: grammar.js  package-lock.json  package.json
src/: builtins.rs  cli.rs  doc.rs  llvm.rs  lsp.rs  main.rs  module.rs  repl.rs  term.rs  typing.rs  utils.rs  value.rs
tree-sitter-fun/: .gitignore  grammar.js  package-lock.json  package.json
tree-sitter-fun/test/corpus/: basic.txt
tree-sitter-node-types/: Cargo.toml
tree-sitter-node-types/src/: lib.rs  node-types.json
tree-sitter-node-types/tests/: something.rs
vscode-fun/: package-lock.json  package.json  vscode-fun-1.0.0.vsix
vscode-fun/client/src/: extension.ts
