[package]
name = "langrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
colored = "2.0.0"
im = "15.1.0"
rustyline = "12.0.0"
text_io = "0.1.12"
tree-sitter = "0.20.10"
tree-sitter-fun = { path = "./tree-sitter-fun" }

