[package]
name = "fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }
colored = "2.0.0"
dashmap = "5.4.0"
im = "15.1.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
ropey = "1.6.0"
rustyline = "12.0.0"
serde_json = "1.0.100"
text_io = "0.1.12"
tokio = { version = "1.29.1", features = ["macros", "fs", "rt", "full"] }
tower-lsp = "0.19.0"
tree-sitter = "0.20.10"
tree-sitter-fun = { path = "./tree-sitter-fun" }

