[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
tree-sitter = "0.20.9"
tree-sitter-fun = {path = "../parser"}
colored = { version = "2.0.0"}
anyhow = "1.0.65"
quickcheck = "0.9.2"
rand = "0.7"
proptest = "1.0.0"
proptest-derive = "0.3.0"
strip-ansi-escapes = "0.1.1"
evm_rs = "0.3.2"
evm = { version = "0.35.0", features = ["serde"] }
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }

